--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>kbaffo.com &copy; 2020</li>
+					<li>kbaffo.com &copy; <span id="copyright-year"></span></li>
 				</ul>
 			</div>
 		</footer>
@@ -168,6 +168,12 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script language="javascript">
+			window.onload = function(e){
+				let currentYear = new Date().getFullYear.toString();
+				document.getElementById("copyright-year").innerText = currentYear;
+			};
+		</script>
 
 	</body>
 </html>
