Fixed bug for dynamic year thing

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		<script src="assets/js/main.js"></script>
 		<script language="javascript">
 			window.onload = function(e){
-				let currentYear = new Date().getFullYear.toString();
+				let currentYear = new Date().getFullYear().toString();
 				document.getElementById("copyright-year").innerText = currentYear;
 			};
 		</script>
