--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				</div>
 				<div class="row">
 					<header>
-						<h4>Analyst Intern</h4>
+						<h4>Data Curator</h4>
 						<p>JWOMPA Media Group</p>
 					</header>
 					<p>At JWOMPA, I researched data on music industry trends based on artists' number of sales as well as streams. I scraped the web for infromation relating to this, and made sense of the data using Excel spreadsheets to create data visuals such as graphs and dashboards. These findings were then used to record trends in music, and present media to customers based on their preference.</p>
